# gta-sa-dotnet

./: .gitignore  CMakeLists.txt  README.md
src/: DllMain.cpp
